# src/controllers/contract-controller.js
@@ -1,5 +1,6 @@
 const truffleContract = require('@truffle/contract');
 const contractData = require('../../build/contracts/Auction.json');
+const Auction = require('../models/auction');
 
 class ContractController {
 
@@ -13,22 +14,25 @@ class ContractController {
         this._web3Connector = web3provider;
         this._contract = truffleContract(contractData);
         this._contract.setProvider(web3provider);
+        this._contract.defaults({from: account});
         this._account = account;
     }
-
-    async deploy() {
-        try {
-            const instance = await this._contract.new({from: this._account});
-            return true;
-        } catch (error) {
-            console.error(error);
-            return false;
-        }
-
+    
+    async newContract(auction) {
+        const instance = await this._contract.new(auction.seller, auction.title, 
+            auction.description);
+        console.debug(`Created new auction at ${instance.address}`);
+        return instance.address;
     }
 
     async getContractInformation(address) {
         const instance = await this._contract.at(address);
+        const result = await instance.getInformation();
+        const auction = new Auction({seller: result['0'], title: result['1'], description: result['2']});
+        auction.id = address;
+        console.debug(`Retrieved contract information at address ${address}:`);
+        console.debug(auction);
+        return auction;
     }
 
     async getInstance(address) {
@@ -38,6 +42,9 @@ class ContractController {
     errorType(truffleError) {
         if (truffleError.message && truffleError.message.includes('Invalid address')) {
             return this.errors.INVALID_ADDRESS_FORMAT;
+        }
+        if (truffleError.message && truffleError.message.includes('no code at address')) {
+            return this.errors.NOT_FOUND;
         }
     }
 
