# src/models/auction.js
@@ -1,9 +1,11 @@
 class Auction {
-    constructor(id, owner, title, description) {
-        this.id = id;
-        this.owner = owner;
-        this.title = title;
-        this.description = description;
+    id = '';
+    seller = '';
+    title = '';
+    description = '';
+
+    constructor(obj) {
+        Object.assign(this, obj);
     }
 }
 
